--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,14 +1,14 @@
 .contact {
 display: flex;
-flex-direction: row;
+flex-direction: column;
 }
 
 .contact-content {
   display: flex;
   flex-direction: column;
-  text-align: center;
+ align-items: center;
 }
 
 .contact-content > p {
-  max-width: 50%;
+  max-width: 75%;
 }
