--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: relative;
   height: 100vh;
   width: 100%;
 }
@@ -29,3 +29,4 @@ body {
   font-size: 1.3rem;
   letter-spacing: 10px;
 }
+
