--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,89 +1,43 @@
 .footer {
   width: 100%;
-  /* padding: .5rem 0 rem; */
   color: white;
   background-color: #1e1810;
   bottom: 0;
-}
-
-a {
-  color: inherit;
-}
-
-.phone>h3 {
-  font-size: larger;
+  white-space: pre-line;
 }
 
 .footer-container {
   max-width: 1240px;
   margin: auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
-}
-
-.footer .left {
-  height: 100%;
-  max-width: 100%;
+  padding: 2rem;
   display: flex;
-  flex-direction: column;
-  padding: 0rem .5rem;
+  justify-content: space-around;
+  /* gap: 30px; */
 }
 
-.footer .right {
-  height: 100%;
-  max-width: 100%;
+a {
+  color: inherit;
+}
+.lunch > p,
+.dinner > p {
+  margin-top: -11px;
+}
+
+.inner-content-center {
   display: flex;
-  flex-direction: column;
-  padding: 0rem .5rem;
-  margin: auto;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 3em;
 }
 
-.footer h4 {
-  font-size: 1.1rem;
-  padding: .5rem 0;
+.lunch > h4 {
+  margin-top: -0.2em;
 }
 
-.footer p {
-  font-size: 1rem 0;
-}
-
-.footer .location {
-  display: flex;
-  align-items: center;
-}
-
-.footer .location p {
-  padding-bottom: .5rem;
-}
-
-.footer .location h4 {
-  padding-top: .5rem;
-}
-
-.logo-footer {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  gap: 30px;
-}
-
-.social {
-  max-height: 1.5rem;
+.dinner > h4 {
+  margin-top: -0.2em;
 }
 
 .fb {
-  font-size: 29px;
-}
-
-.fb:hover {
-  color: rgba(211, 212, 215, 0.7);
-}
-
-@media screen and (max-width:640px) {
-  .footer-container {
-    grid-template-columns: 1fr;
-    gap: 0;
-  }
-
+  padding-right: .5em;
 }
