--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,7 +1,7 @@
 .contact {
   display: flex;
   margin: 7rem;
-  letter-spacing: 3px; 
+  letter-spacing: 3px;
   max-width: 100%;
 }
 
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 .contact-items {
@@ -39,4 +38,14 @@
   /* margin: 2rem; */
   /* margin-right: 3rem; */
   text-align: center;
+}
+
+@media screen and (max-width: 980px) {
+  .contact {
+    margin: 1rem;
+  }
+  .contact-items {
+    flex-direction: column;
+    align-items: center;
+  }
 }
