styles home adds links

--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -14,7 +14,7 @@
 .contact-items {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .contact-items > img {
@@ -35,9 +35,31 @@
 .location-row {
   display: flex;
   flex-direction: column;
-  /* margin: 2rem; */
+  margin: 3rem;
   /* margin-right: 3rem; */
   text-align: center;
+}
+
+.delivery {
+  display: flex;
+  flex-direction: row;
+  margin-top: -1rem;
+}
+
+.grubhub {
+  margin-right: 2em;
+  transition: all 0.2s ease-in-out;
+}
+.grubhub:hover {
+  transform: scale(1.03);
+}
+
+.doordash {
+  transition: all 0.2s ease-in-out;
+}
+
+.doordash:hover {
+  transform: scale(1.03);
 }
 
 @media screen and (max-width: 980px) {
@@ -47,5 +69,22 @@
   .contact-items {
     flex-direction: column;
     align-items: center;
+  }
+
+  .location-row {
+    margin: 0;
+  }
+
+  .delivery {
+    display: flex;
+    flex-direction: column;
+    /* margin-top: -1rem; */
+  }
+
+  .grubhub {
+    margin: 0;
+  }
+  .doordash {
+    margin-top: -2em;
   }
 }
