--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -3,7 +3,13 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 20px;
 }
 .menu-header {
     font-size: 1.5rem;
+}
+
+.menu-main {
+   background-color: rgb(254, 243, 228);
+   padding: 15px 0;
 }
