--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   -webkit-tap-highlight-color: transparent;
+  background-color: rgb(250, 248, 248);
 }
 
 .image {
@@ -30,5 +31,6 @@ body {
   padding: 1rem;
   font-size: 1.3rem;
   letter-spacing: 10px;
+  text-align: center;
 }
 
